# quiz-bot

./: pyproject.toml
src/: main.py
